tests/snapshots/help__alias_list_help.snap
---
source: tests/help.rs
expression: text
---
List aliases as tab-separated lines

Usage: furet alias list

Options:
  -h, --help  Print help
