tests/snapshots/help__alias_remove_help.snap
---
source: tests/help.rs
expression: text
---
Delete an alias

Usage: furet alias remove <NAME>

Arguments:
  <NAME>  Name of the alias, case-insensitive

Options:
  -h, --help  Print help
