tests/snapshots/help__export_help.snap
---
source: tests/help.rs
expression: text
---
Print the whole database as versioned JSON, for backup or another machine

Usage: furet export

Options:
  -h, --help  Print help
