tests/snapshots/help__home_help.snap
---
source: tests/help.rs
expression: text
---
Print the configured home directory, or nothing when unset or invalid

Usage: furet home

Options:
  -h, --help  Print help
