tests/snapshots/help__import_help.snap
---
source: tests/help.rs
expression: text
---
Import directories recorded by another tool, read from stdin

Usage: furet import <SOURCE>

Arguments:
  <SOURCE>
          Tool to import from

          Possible values:
          - zoxide:       Import from `zoxide query -ls` on stdin
          - pwsh-history: Import cd-like lines from a PSReadLine history on stdin

Options:
  -h, --help
          Print help (see a summary with '-h')
