tests/snapshots/help__init_help.snap
---
source: tests/help.rs
expression: text
---
Print shell integration code for the requested shell

Usage: furet init <COMMAND>

Commands:
  pwsh  Print the PowerShell integration script
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
