tests/snapshots/help__init_pwsh_help.snap
---
source: tests/help.rs
expression: text
---
Print the PowerShell integration script

Usage: furet init pwsh [OPTIONS]

Options:
      --cmd <CMD>  Name of the generated jump function; `fi`, `fm` and `fh` keep their names [default: f]
  -h, --help       Print help

PowerShell functions (defined by `furet init pwsh`):
  f <query>        Jump to the best match; -l scopes to the git project,
                   -h to the home
  f                Jump to the home directory
  f -   f -N       Go back 1 or N directories in this session
  f ..  f ...      Go up one level per extra dot (.. = 1, ... = 2)
  f !name          Jump to an alias, or a mark with f !3
  fi [query]       Pick interactively (fzf, else a numbered menu);
                   fi ! lists aliases and marks
  fm               List marks; fm 3 sets, fm -d 3 / fm -d! delete,
                   fm + / fm - cycle
  fh [-a] [-n N]   Show the visit history, numbered like f -N; -a lists every
                   session unnumbered, -n N caps the lines
`f` is renamed with `--cmd <name>`; `fi`, `fm` and `fh` keep their names.
Ctrl+Alt+Right / Ctrl+Alt+Left run fm + / fm - on an empty line.
